swap UI alignment fix!

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,16 @@ input[type="number"] {
     position: absolute;
     top: 21rem;
   }
+
+  .settings {
+    position: absolute;
+    top: 15.5rem !important;
+  }
+
+  .tokenSelect {
+    position: absolute;
+    top: 15rem !important;
+  }
 }
 
 @media (max-height: 620px) and (max-width: 1024px) {
@@ -97,6 +107,16 @@ input[type="number"] {
   .connect-wallet {
     position: absolute;
     top: 21rem;
+  }
+
+  .settings {
+    position: absolute;
+    top: 7.5rem !important;
+  }
+
+  .tokenSelect {
+    position: absolute;
+    top: 8rem;
   }
 }
 
